crates/lm-parser/src/snapshots/lm_parser__tests__integer_literal.snap
---
source: crates/lm-parser/src/tests.rs
expression: result
---
=== AST ===
{
  "decls": [
    {
      "kind": {
        "type": "LetDef",
        "name": "x",
        "type_annotation": null,
        "value": {
          "kind": {
            "type": "Literal",
            "value": {
              "kind": "Int",
              "value": 42
            }
          },
          "span": {
            "file_id": 0,
            "start": 8,
            "end": 10
          }
        }
      },
      "span": {
        "file_id": 0,
        "start": 0,
        "end": 11
      }
    }
  ],
  "span": {
    "file_id": 0,
    "start": 0,
    "end": 11
  }
}
