crates/lm-parser/src/snapshots/lm_parser__tests__precedence_add_mul.snap
---
source: crates/lm-parser/src/tests.rs
expression: result
---
=== AST ===
{
  "decls": [
    {
      "kind": {
        "type": "LetDef",
        "name": "x",
        "type_annotation": null,
        "value": {
          "kind": {
            "type": "BinaryOp",
            "op": "Add",
            "lhs": {
              "kind": {
                "type": "Literal",
                "value": {
                  "kind": "Int",
                  "value": 1
                }
              },
              "span": {
                "file_id": 0,
                "start": 8,
                "end": 9
              }
            },
            "rhs": {
              "kind": {
                "type": "BinaryOp",
                "op": "Mul",
                "lhs": {
                  "kind": {
                    "type": "Literal",
                    "value": {
                      "kind": "Int",
                      "value": 2
                    }
                  },
                  "span": {
                    "file_id": 0,
                    "start": 12,
                    "end": 13
                  }
                },
                "rhs": {
                  "kind": {
                    "type": "Literal",
                    "value": {
                      "kind": "Int",
                      "value": 3
                    }
                  },
                  "span": {
                    "file_id": 0,
                    "start": 16,
                    "end": 17
                  }
                }
              },
              "span": {
                "file_id": 0,
                "start": 12,
                "end": 17
              }
            }
          },
          "span": {
            "file_id": 0,
            "start": 8,
            "end": 17
          }
        }
      },
      "span": {
        "file_id": 0,
        "start": 0,
        "end": 18
      }
    }
  ],
  "span": {
    "file_id": 0,
    "start": 0,
    "end": 18
  }
}
